# water-column-sonar-annotation

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  learning_avro.py  open_evr.py  process_evr_files.py  process_geojson.py  pyproject.toml  requirements.txt  users.avro  wcsa.avro
.github/workflows/: release_action.yaml
analysis/: convert_csv.py
schema/: schema.json  user.avsc  water-column-sonar-annotation.avsc  water-column-sonar-annotation.avscBACKUP
tests/: conftest.py  test_process_evr_files.py
tests/astronomical/: test_astronomical_manager.py
tests/cruise/: test_cruise.py  test_cruise_manager.py
tests/echoview_record/: test_echoview_record.py  test_echoview_record_manager.py
tests/geospatial/: test_geospatial_manager.py
tests/test_resources/: echoview_test_file.evr
water_column_sonar_annotation/: 01_get_distance_point_to_coast.py  __init__.py  process_evr_files.py
water_column_sonar_annotation/astronomical/: __init__.py  astronomical_manager.py
water_column_sonar_annotation/cruise/: __init__.py  cruise_manager.py
water_column_sonar_annotation/echoview_record/: __init__.py  echoview_record_manager.py
water_column_sonar_annotation/geospatial/: __init__.py  geospatial_manager.py
water_column_sonar_annotation/record/: __init__.py  echofish_record_manager.py  echoview_record_manager.py  graph_record_manager.py  parquet_record_manager.py
