[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "water-column-sonar-annotation"
version = "26.1.0"
authors = [
  { name="Rudy Klucik", email="rudy.klucik@noaa.gov" },
]
maintainers = [
  { name="Rudy Klucik", email="rudy.klucik@noaa.gov" },
]
description = "Processing tool for working with water column sonar annotation data."
keywords = ["ocean", "sonar", "water column"]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

# uv sync --all-groups --upgrade
dependencies = [
    "aiobotocore",
    "echoregions",
    "fiona",
    "fsspec",
    "geopandas",
    "numpy",
    "pandas",
    "pooch",
    "pyarrow",
    "python-dotenv",
    "s3fs==2025.12.0", # problem here, uv finds the wrong one
    "scipy",
    "setuptools",
    "shapely",
    "xarray",
    "zarr",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "build",
    "pooch",
    "pre-commit",
#    "pyinstaller",
    "pytest",
    "ruff",
    "tqdm",
    "twine",
]

[project.urls]
Homepage = "https://github.com/CI-CMG/water-column-sonar-annotation"
Issues = "https://github.com/CI-CMG/water-column-sonar-annotation/issues"

[tool.setuptools]
py-modules = []

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pre-commit-hooks.bandit]
exclude = ["*/tests/*"]

[tool.isort]
known_first_party = "water_column_sonar_annotation"
multi_line_output = 3
force_grid_wrap = 0
include_trailing_comma = true
combine_as_imports = true

[tool.black]
line-length = 88
