[project]
name = "water-column-sonar-annotation"
version = "26.1.8"
authors = [
    { name = "Rudy Klucik", email = "rudy.klucik@noaa.gov" },
]
maintainers = [
    { name = "Rudy Klucik", email = "rudy.klucik@noaa.gov" },
]
description = "Processing tool for working with water column sonar annotation data."
keywords = ["ocean", "sonar", "water column"]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]

# uv sync --all-groups --upgrade
dependencies = [
    "build",
    "fiona",
    "folium",
    "geopandas",
    "netcdf4",
    "numpy",
    "pandas",
    "pandas-stubs",
    "pooch",
    "pyarrow",
    "pyogrio",
    "python-dotenv",
    "s3fs", # problem here, uv finds the wrong one
    "scipy",
    "shapely",
    "setuptools",
    "timezonefinder",
    #    "wheel",
    "xarray",
    "zarr",
]

# uv sync --all-groups --upgrade
[dependency-groups]
dev = [
    "bandit[toml]",
    "build",
    "pooch",
    "pre-commit",
    "pvlib",
    "pytest",
    "ruff",
    "tqdm",
]

[project.urls]
Homepage = "https://echo.fish"
Repository = "https://github.com/CI-CMG/water-column-sonar-annotation"
Documentation = "https://github.com/CI-CMG/water-column-sonar-annotation"
Issues = "https://github.com/CI-CMG/water-column-sonar-annotation/issues"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pre-commit-hooks.bandit]
exclude = ["*/tests/*"]

[tool.setuptools.packages.find]
exclude = ["data*"]
